--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
       </form>
     </section>
 
-    <script src="js/index.js"></script>
+    <script src="js/calcula-imc.js"></script>
+    <script src="js/form.js"></script>
   </body>
 </html>
