Adicionado campo de busca

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     <main>
       <section class="container">
         <h2>Meus pacientes</h2>
+
+        <input
+          type="text"
+          name="filtro"
+          id="filtrar-tabela"
+          placeholder="Digite o nome do paciente"
+        />
         <table>
           <thead>
             <tr>
@@ -124,5 +131,6 @@
     <script src="js/calcula-imc.js"></script>
     <script src="js/form.js"></script>
     <script src="js/remover-paciente.js"></script>
+    <script src="js/filtra.js"></script>
   </body>
 </html>
