Adicionado requisição api get

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
       <section class="container">
         <h2>Meus pacientes</h2>
-
+        <label>Filtre</label>
         <input
           type="text"
           name="filtro"
@@ -74,6 +74,10 @@
             </tr>
           </tbody>
         </table>
+        <span id="errp-ajax" class="invisivel">Erro ao buscar pacientes</span>
+        <button id="buscar-paciente" class="botao bto-principal">
+          Buscar Paciente
+        </button>
       </section>
     </main>
 
@@ -132,5 +136,6 @@
     <script src="js/form.js"></script>
     <script src="js/remover-paciente.js"></script>
     <script src="js/filtra.js"></script>
+    <script src="js/buscar-pacientes.js"></script>
   </body>
 </html>
